--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
+.program {
+  color: black;
+
+  min-height: fit-content;
+
   text-align: center;
+
+  font-family: "Times New Roman", Times, serif;
+
+  overflow: hidden;
+}
+.timesFont {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.custom-button {
+  background: #09bb8e;
+  padding: 10px 14px;
+  border: none;
   color: white;
+  border-radius: 15px;
+  font-size: 24px;
+  text-decoration: none;
+  font-weight: bold;
+  transition: all 0.18s ease-in;
 }
 
-.App-link {
-  color: #61dafb;
+.custom-button:hover {
+  background: transparent;
+  color: #09bb8e;
+  border: 2px solid #09bb8e;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.back-to-top {
+  position: fixed;
+  right: 30px;
+  bottom: 50%;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #2f3138;
+  color: white;
+  border: none;
+  cursor: pointer;
+  z-index: 2;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+}
+
+::-webkit-scrollbar {
+  width: 0px; /* Remove scrollbar space */
+  background: transparent; /* Optional: just make scrollbar invisible */
+}
+
+html {
+  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+}
+
+html {
+  scroll-behavior: smooth;
 }
