--- a/src/Styles/blogStyles.css
+++ b/src/Styles/blogStyles.css
@@ -117,6 +117,14 @@ custom-button-blog {
     font-size: 11px;
   }
 
+  .blog-page {
+    margin-top: 18vh;
+    margin-bottom: 10vh;
+    padding-right: 14vw;
+    padding-left: 14vw;
+    text-align: start;
+  }
+
   .blog-page h2 {
     margin: 25px;
     font-size: 1rem;
