--- a/src/Styles/navbarStyles.css
+++ b/src/Styles/navbarStyles.css
@@ -13,7 +13,7 @@
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
-  padding: 10px;
+  padding: 10px 90px;
 
   font-size: 26px;
   min-width: 100vw;
@@ -25,6 +25,7 @@
   align-items: center;
   display: flex;
   align-items: center;
+  margin: 0px;
 }
 
 .flex-nav-container img {
@@ -60,7 +61,7 @@
   color: black;
 }
 .custom-list-dropdown {
-  background-color: #00bfa5;
+  background-color: white;
   padding: 0%;
   border: none;
   margin-top: 10px;
@@ -74,7 +75,6 @@
 .dropdown-item-custom:hover {
   font-size: 1.5rem;
   background-color: transparent;
-  color: white;
 }
 
 @media screen and (max-width: 769px) {
