--- a/src/Styles/aboutStyles.css
+++ b/src/Styles/aboutStyles.css
@@ -33,14 +33,14 @@
 .team-row h1 {
   font-size: 3rem;
   position: absolute;
-  padding: 10px;
+  padding: 15px;
   left: 50%;
   transform: translateX(-50%);
-  border-bottom: 1px solid grey;
 }
 
 .founder-card-container {
   color: black;
+  padding: 0 5vh;
 }
 
 .custom-founder-card img {
