--- a/src/Styles/blogStyles.css
+++ b/src/Styles/blogStyles.css
@@ -66,13 +66,50 @@ custom-button-blog {
 }
 
 .blog-page h2 {
-  text-align: center;
   margin: 45px;
   font-weight: bold;
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  border-bottom: 1px grey groove;
+
   width: fit-content;
+}
+
+.blog-author {
+  border-top: 1px solid grey;
+  border-bottom: 1px solid grey;
+  padding: 20px 0;
+  margin: 30px 0;
+}
+
+.blog-author img {
+  height: 120px;
+  width: 120px;
+  border-radius: 50%;
+}
+
+.blog-author h3 {
+  font-size: 1.2rem;
+}
+
+.blog-author h4 {
+  font-size: 1rem;
+  color: grey;
+}
+
+.share-div-author-conatiner {
+  position: relative;
+}
+
+.share-div-author {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.blog-author table {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 @media screen and (max-width: 769px) {
@@ -126,11 +163,53 @@ custom-button-blog {
   .blog-page h2 {
     margin: 25px;
     font-size: 1rem;
-    border-bottom: 1px grey groove;
+
     width: fit-content;
   }
 
   .blog-page h3 {
     font-size: 1.3rem;
+  }
+
+  .blog-author h3 {
+    font-size: 0.9rem;
+  }
+
+  .blog-author h4 {
+    font-size: 0.6rem;
+    color: grey;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .blog-author {
+    padding-top: 20px;
+    padding-bottom: 55px;
+  }
+  .blog-author img {
+    height: 80px;
+    width: 80px;
+    border-radius: 50%;
+  }
+
+  @media screen and (min-width: 769px) {
+    .blog-author h3 {
+      font-size: 1.2rem;
+    }
+
+    .blog-author h4 {
+      font-size: 0.8rem;
+      color: grey;
+    }
+  }
+
+  .share-div-author {
+    margin-top: 20px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
   }
 }
