--- a/src/Styles/homeStyles.css
+++ b/src/Styles/homeStyles.css
@@ -20,11 +20,16 @@
 .secondary-text {
   font-size: 1.4rem;
   margin-bottom: 7vh;
+  padding: 0vw 10vw;
+}
+
+.intro-container {
+  position: relative;
+  margin-top: 8vh;
+  margin-bottom: 20vh;
 }
 
 .blog-intro {
-  margin-top: 5vh;
-  margin-bottom: 8vh;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
@@ -65,6 +70,13 @@
     min-height: 75vh;
     max-height: 95vh;
     background-color: #2f3138;
+  }
+
+  .intro-container {
+    position: relative;
+    width: 100vw;
+    margin-top: 6vh;
+    margin-bottom: 8vh;
   }
 
   .mission-statement {
