--- a/src/data/Blogs/secondBlog.css
+++ b/src/data/Blogs/secondBlog.css
@@ -1,37 +1,37 @@
-.first-blog {
+.second-blog {
   font-family: "Times New Roman", Times, serif;
   margin-bottom: 5vh;
 }
 
-.first-blog p {
-  font-size: 24px;
+.second-blog p {
+  font-size: 25px;
   font-weight: normal;
 }
 
-.first-blog strong {
+.second-blog strong {
   font-weight: bold;
 }
 
-.first-blog li {
+.second-blog li {
   font-size: 22px;
   padding-left: 5px;
 }
 
-.first-blog li p {
+.second-blog li p {
   padding-left: 20px;
 }
 
-.first-blog h1 {
+.second-blog h1 {
   font-weight: bold;
   font-size: 28px;
 }
 
-.first-blog ol {
+.second-blog ol {
   font-weight: bold;
   font-size: 28px;
 }
 
-.first-blog img {
+.second-blog img {
   position: relative;
   left: 50%;
   transform: translateX(-50%);
@@ -42,34 +42,34 @@
 }
 
 @media screen and (max-width: 768px) {
-  .first-blog p {
-    font-size: 15px;
+  .second-blog p {
+    font-size: 16px;
   }
 
-  .first-blog strong {
+  .second-blog strong {
     font-weight: bold;
   }
 
-  .first-blog li {
-    font-size: 13px;
+  .second-blog li {
+    font-size: 14px;
     padding-left: 5px;
   }
 
-  .first-blog li p {
+  .second-blog li p {
     padding-left: 15px;
   }
 
-  .first-blog h1 {
+  .second-blog h1 {
     font-weight: bold;
     font-size: 18px;
   }
 
-  .first-blog ol {
+  .second-blog ol {
     font-weight: bold;
     font-size: 18px;
   }
 
-  .first-blog img {
+  .second-blog img {
     position: relative;
     left: 50%;
     transform: translateX(-50%);
